syntax = "proto3";

option go_package = "./;protos";
package room;
// import "user.proto";

message RoomInfo {
  string id = 1;
  string appId = 2;
  string authorId = 3;
  string type = 4;
  string name = 5;
  string avatar = 6;
  message  RoomsAvailableRange {
    int64 startTime = 1;
    int64 endTime = 2;
    int64 maximumMembers = 3;
    bool e2ee = 4;
    bool allowMembersJoin = 5;
    bool allowMembersChat = 6;
    bool joinRequiresReview = 7;
    bool chatRequiresReview = 8;
  }
  RoomsAvailableRange availableRange = 7;
  int64 status = 8;
  int64 createTime = 9;
  int64 deleteTime = 10;
  int64 startTime = 11;
  int64 endTime = 12;
  int64 lastSeenTime = 13;
}

message RoomLog {
  string id = 1;
  string authorId = 2;
  string roomId = 3;
  string remark = 4;
  int64 status = 5;
  int64 deleteStatus = 6;
  int64 agreeTime = 7;
  int64 disagreeTime = 8;
  int64 createTime = 9;
  int64 lastUpdateTime = 10;
  
}

message CreateRoom {
  message Request {
    string authorId = 1;
    string type = 2;
    string name = 3;
    string avatar = 4;
    message  RoomsAvailableRange {
      int64 startTime = 1;
      int64 endTime = 2;
      // 启用
      int64 maximumMembers = 3;
      // 启用
      bool e2ee = 4;
      // 启用
      bool allowMembersJoin = 5;
      // 启用
      bool allowMembersChat = 6;

      bool joinRequiresReview = 7;
      bool chatRequiresReview = 8;
    }
    RoomsAvailableRange availableRange = 5;

  }
  message Response {
    string roomId = 1;
  }

}
